// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render with title and with link 1`] = `
<div
  class="card relative"
>
  <div
    class="card__title"
  >
    Title
  </div>
  <div>
    Content
  </div>
  <div
    class="h-8"
  />
  <a
    class="card-link"
    href="https://www.example.com"
  >
    <div
      class="card-link__text after:chevron"
    >
      Link
    </div>
  </a>
</div>
`;

exports[`Card should render with title and without link 1`] = `
<div
  class="card relative"
>
  <div
    class="card__title"
  >
    Title
  </div>
  <div>
    Content
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Card should render without title and link 1`] = `
<div
  class="card relative"
>
  <!---->
  <div>
    Content
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Card should render without title and with link 1`] = `
<div
  class="card relative"
>
  <div
    class="card__title"
  >
    Title
  </div>
  <div>
    Content
  </div>
  <div
    class="h-8"
  />
  <a
    class="card-link"
    href="https://www.example.com"
  >
    <div
      class="card-link__text after:chevron"
    >
      Link
    </div>
  </a>
</div>
`;
